2008-11-26  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.26.modules: gypsy now on git.freedesktop.org

2008-11-26  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.26.modules: cleanup deps for libccss

2008-11-25  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: branched libgtop,
	gnome-system-monitor, gnome-menus, gnome-panel, libwnck and libgweather
	for 2.24.

2008-11-24  Olav Vitters  <olav@bkor.dhs.org>

	* modulesets/gnome-external-deps-2.26.modules: Update gamin to 0.1.10.

2008-11-24  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-external-deps-2.24.modules:
	* modulesets/gnome-external-deps-2.26.modules: updated
	system-tools-backends to stable 2.6.0

2008-11-24  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.26.modules: added libccss from git
	
	* modulesets/gnome-2.26.modules: make gtk-css-engine depends on libccss 

2008-11-24  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: gedit branched for 2.24.

2008-11-22  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* modulesets/gnome-2.26.modules: gupnp-vala now depends on vala-trunk.

2008-11-21  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-external-deps-2.26.modules: fix libgda

2008-11-17  Vivien Malerba <malerba@gnome-db.org>

	* modulesets/gnome-external-deps-2.26.modules: Add libgda to
	the proposed list

2008-11-17  John Carr  <john.carr@unrouted.co.uk>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules:
	Correct moduleset for vala-trunk; now *-mirror will work for it :)

2008-11-17  John Carr  <john.carr@unrouted.co.uk>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules:
	gmime should use revision arg instead.

2008-11-17  John Carr  <john.carr@unrouted.co.uk>

	* modulesets/freedesktop-2.24.modules:
	* modulesets/freedesktop-2.26.modules:
	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules:
	Make 'jhbuild checkmodulesets' pass
