@@ -1,3 +1,11 @@
+2008-11-27  Iago Toral Quiroga <itoral@igalia.com>
+
+	* jhbuild/buildbot/status/web/__init__.py:
+	* jhbuild/buildbot/steps.py:
+	* jhbuild/buildbot/factory.py: Added clean stage. Also, allow the
+	possibility to define commands that can fail without failing
+	the build (like clean).
+
 2008-11-26  Luca Ferretti  <elle.uca@libero.it>
 
 	* modulesets/freedesktop-2.26.modules: gypsy now on git.freedesktop.org
